@@ -40,6 +40,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #23796: peak and read1 methods of BufferedReader now raise ValueError
+  if they called on a closed object. Patch by John Hergenroeder.
+
 - Issue #21795: smtpd now supports the 8BITMIME extension whenever
   the new *decode_data* constructor argument is set to False.
 
